# hcmut-vn-stock-prediction

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
configs/: paths.yaml  project.yaml
configs/data/: dataset_daily.yaml  universe_broad.yaml  universe_core10.yaml
configs/eval/: leaderboard.yaml  metrics.yaml
configs/models/: itransformer.yaml  kronos.yaml  patchtst.yaml  xlstm_ts.yaml
docs/: architecture.md  best_f6_v2_direction_blend.md  data_contract.md  final_model_architecture_and_principles.md  model_blocks.md  notebook_conventions.md  run_xlstm_itransformer_benchmark.md
docs/models/: Kronos.md  iTransformer.md  xLSTM-TS.md
notebooks/: 00_project_setup.ipynb  01_data_ingest_and_eda.ipynb  02_shared_dataset_builder.ipynb  10_xlstm_ts_block.ipynb  11_itransformer_block.ipynb  12_patchtst_block.ipynb  13_kronos_block.ipynb  20_compare_models.ipynb  21_final_decision_support.ipynb
outputs/final/: hybrid_xlstm_baseline_predictions.parquet  hybrid_xlstm_direction_excess_blend_predictions.parquet  (+1 more)
scripts/: backtest_best_f6_v2.py  compute_kronos_full_metrics.py  evaluate_best_f6_v2_top5.py  generate_report_charts.py  report_investment_application_10m.py  run_architecture_ablation_longonly.py  run_final_top5_model_suite.py  run_kronos_full_test.py  run_long_only_portfolio_layer.py  run_model_upgrade_top5.py  run_rank_aware_hybrid_upgrade.py
tests/: test_data_schema.py  test_fetch.py  test_horizon_target_comparison.py  test_metrics.py  test_model_roster.py  test_prediction_format.py  test_split.py
(+144 files in other folders)
